<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weightself</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //LOGIN E SIGNUP
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="conferma_password">Confirm password</string>
    <string name="nome">Name</string>
    <string name="cognome">Surname</string>
    <string name="altezza">Height (cm)</string>
    <string name="login">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="logout">Logout</string>
    <string name="compila">Fill in the fields below to create an account.</string>
    <string name="nonregistrato">Not registered yet?</string>
    <string name="matchingPassword">Passwords do not match.</string>
    <string name="invalidEmailAddress">Please use a valid email address.</string>
    <string name="loginError">Incorrect email address or password.</string>
    <string name="compilaTutto">Every field is mandatory.</string>
    <string name="passwordTooShort">Your password must be at least 6 letters long.</string>
    <string name="signUpSuccessful">Successfully signed up!</string>
    <string name="signUpNotSuccessful">Registration not completed. Please try again.</string>

    //HOME
    <string name="home">Home</string>
    <string name="training_recommended">Recommended training</string>
    <string name="try_recipe">Try this recipe</string>
    <string name="tips" translatable="false">TIPS</string>
    <string name="last_weight">Last Weight</string>
    <string name="stepcounter">Steps</string>
    <string name="distance">Distance (km)</string>
    <string name="graficoPesi">Your weight trend</string>
    <string name="permissionGranted">Permission granted.</string>
    <string name="permissionDenied">Permission denied.</string>
    <string name="noSensor">No sensor detected. Step counter is disabled.</string>
    <string name="longTapToReset">Long tap to reset.</string>
    <string name="pesatiGrafico">Weigh yourself to fill the chart.</string>
        //tips
    <string name="obiettivi">Define achievable targets</string>
    <string name="idro">Hydration is crucial</string>
    <string name="nuovo">Try something new everyday</string>
    <string name="riposo">Get some rest after a workout session</string>
    <string name="routine">Try to define a daily routine</string>
    <string name="dieta">Follow an healthy diet</string>
    <string name="stretching">Don\'t start a workout session without stretching</string>
    <string name="vegetables">Consider eating a lot of fruits and vegetables</string>
    <string name="pasto">Do not skip meals</string>
    <string name="stagionalità">Try to choose seasonal and fresh products.</string>



    //TRAINING
    <string name="training">Training</string>
    <string name="scelti_per_te">Selected for you</string>
    <string name="all_training">All trainings</string>
    <string name="fav_training">Favourite trainings</string>
    <string name="title_time">Duration:</string>
    <string name="title_level">Level:</string>
    <string name="title_equipment">Equipment:</string>
    <string name="start_training">Start Training</string>
    <string name="youtube">By pressing this button you will be redirected to YouTube.com</string>

    //RECIPES
    <string name="gain_calories">Gained kCal</string>
    <string name="burn_calories">Burned kCal</string>
    <string name="recipe">Recipes</string>
    <string name="plus_calories">Add kCal</string>
    <string name="all_recipes">All Recipes</string>
    <string name="fav_recipes">Favourite Recipes</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_process">Process</string>
    <string name="search">Search…</string>
    <string name="eat_recipe">Eat</string>
    <string name="gainedCalories">Gained calories updated.</string>

    //USER
    <string name="user">User</string>
    <string name="last_weight_saved">Last Saved Weight</string>
    <string name="remaining_kcal">kCal to burn</string>
    <string name="today_steps">Today\'s data</string>
    <string name="steps_out_of">steps out of</string>
    <string name="bmi_text">Body Mass Index</string>
    <string name="errLogout" >Logout failed, check your Internet connection.</string>
        //bmi condition
    <string name="below18">Underweight</string>
    <string name="between1825">Normal Weight</string>
    <string name="between2530">Pre-Obesity</string>
    <string name="between3035">Obesity I</string>
    <string name="between3540">Obesity II</string>
    <string name="above40">Obesity III</string>
    <string name="pesati">Weigh yourself to visualize data.</string>

    //SCALE
    <string name="connect">Connect</string>
    <string name="connectingText">Connect the app to your Weight Scale</string>
    <string name="pesa">Weigh</string>
    <string name="save">Save</string>
    <string name="option">Step on the scale</string>
    <string name="weightSaved">The value has been saved correctly.</string>
    <string name="weightNotSaved">The value has not been saved. Please check your internet connection.</string>

    //MENU
    <string name="menu_kcal">Kcal</string>
    <string name="menu_level">Level</string>
    <string name="menu_time">Time</string>
    <string name="menu_namet">Training Name</string>
    <string name="menu_namer">Recipe Name</string>


</resources>