<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="Compila tutti i campi per procedere con la registrazione"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordC_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/conferma_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/line" />

        <EditText
            android:id="@+id/name_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/surname_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/cognome"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/height_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/altezza"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/save_register"
            android:layout_width="127dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#53c1e5"
            android:text="Registrati"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>